publish: Merge pull request #125 from tradegecko/typo/webhooks-docs
generated from commit 82cbf4e14840f5a1acdf6054c6c678f9434eb430

--- a/docs.html
+++ b/docs.html
@@ -1461,7 +1461,7 @@ specifically return records with a status of <code>archived</code>.</p></p>
 <p><code>X-Gecko-Signature</code>: A signed signature for verification.</p>
 
 <p>To ensure the request comes from QuickBooks Commerce itself and is not being spoofed be sure to verify the
-signature agains the payload received.</p>
+signature against the payload received.</p>
 
 <p>An example implementation in Ruby is provided.</p>
 
